# market-sentinel

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  DISCORD_SETUP.md  README.md  SETUP_WINDOWS.md  pyproject.toml
.github/workflows/: deploy.yml
alertengine/: __init__.py  __main__.py  aggregator.py  alert_window.py  discord_bot.py  engine.py  gate.py  indicators.py  interfaces.py  models.py  repl.py  settings.py  watch_controller.py
alertengine/feeds/: alpaca_feed.py  alpaca_replay_feed.py  mock_feed.py
alertengine/notifiers/: console_notifier.py  multi_notifier.py  ntfy_notifier.py
alertengine/prescreen/: __init__.py  __main__.py  calendar.py  reporting.py  runner.py  screener.py  sinks.py  watchlist.py
alertengine/rules/: bb_rsi_exit_rule.py  bb_rsi_rule.py
alertengine/screeners/: mock_screener.py  yfinance_screener.py
docs/: ARCHITECTURE.md  DISCORD_SETUP.md
infra/: README.md
infra/lambda/prescreen_trigger/: handler.py
infra/scripts/: bootstrap-state.sh  fetch-config.sh  notify-ops.sh  redeploy.sh  sync-overlay.sh
infra/systemd/: market-sentinel-alert@.service  market-sentinel-config.service  market-sentinel-prescreen.service  market-sentinel-prescreen.timer  market-sentinel.service
infra/terraform/: backend.tf  cloudwatch.tf  ec2.tf  eventbridge.tf  github_oidc.tf  iam.tf  lambda.tf  main.tf  network.tf  outputs.tf  resource_group.tf  s3.tf  sns.tf  ssm.tf  terraform.tfvars.example  user_data.sh.tftpl  variables.tf  versions.tf
tests/: test_aggregator.py  test_alert_delivery.py  test_alert_window.py  test_alpaca_feed.py  test_alpaca_replay_feed.py  test_backfill.py  test_bb_rsi_exit_rule.py  test_console_notifier.py  test_discord_bot.py  test_engine_e2e.py  test_exit_state_machine.py  test_gate.py  test_indicators.py  test_ntfy_notifier.py  test_prescreen.py  test_state_machine.py  test_watch_controller.py  test_yfinance_screener.py
