[project]
name = "trading-alert-engine"
version = "0.1.0"
description = "Async alert engine that watches human-approved symbols on 2-min bars and fires console alerts on a Bollinger Band + RSI setup."
# README targets 3.12; relaxed to 3.10 to match the local interpreter. Bump back if standardizing on 3.12.
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "yfinance",      # screening only (never the trade/data path)
    "xlrd",          # read the .xls watchlist for the overnight pre-screen
    "alpaca-py>=0.43,<0.44", # pinned: adapter uses its private async runner
    "python-dotenv", # load ALPACA_* from .env
    "tzdata",        # zoneinfo tz database (needed on Windows; no-op elsewhere)
    "discord.py>=2.5,<3", # private slash-command control + alert delivery
]

[project.optional-dependencies]
dev = ["pytest", "black"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["alertengine*"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
